--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     ],
     "require":{
-        "illuminate/database":"master"
+        "illuminate/database":"master",
+        "tecnick.com/tcpdf": "dev-master"
     },
     "autoload":{
         "psr-0":{
