--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         }
     ],
     "require":{
-        "illuminate/database":"master",
+        "illuminate/database":"4.0.*",
         "tecnick.com/tcpdf": "dev-master"
     },
     "autoload":{
